2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: We should only create the clip after
	  we've measured for the first time. Fixes the default value
	  tests.

2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: DOs which are
	  expanded from a ControlTemplate need to keep track of the
	  'templateBindingSource' so that we can attach new
	  TemplateBindings later. This value is stored in addition to
	  'IsTemplateItem' as DOs can be expanded from templates which
	  are not ControlTemplates and only ControlTemplate passes in
	  a non-NULL value for templateBindingSource.

2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Shapes/PathTest.cs:
	* System.Windows.Controls/GridTestAuto.cs: Add MoonlightBug to
	  three recent regressions so we can get the build back to
	  green.

2009-11-20  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ArrangingTest.cs: Add a bunch of additional
	  checks, they all pass.

	* System.Windows.Controls/GridTestAuto.cs: Remove MoonlightBug
	  from test which passes now.

	* System.Windows.Controls/ScrollContentPresenterTest.cs: Add a
	  bunch of new tests for ScrollContentPresenter to make sure
	  the correct values are being passed to/from its content.

2009-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/PresentationFrameworkCollectionTest.cs: Add test
	case that shows IEnumerable implementation is also IDisposable

2009-11-20  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/AutomationPeerTest.cs: Fixes NIE.

	r: spouliot

2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/FrameworkElementAutomationPeerTest.cs:
	Fixed build.

2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/SliderAutomationPeerTest.cs 
	  System.Windows.Automation.Peers/ProgressBarAutomationPeerTest.cs,