@@ -1,5 +1,11 @@
 2009-11-23  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/ScrollContentPresenterTest.cs: Add a
+	  bunch of extra tests to ensure we handle scrolling to valid
+	  and invalid offsets correctly. They all passed first time.
+
+2009-11-23  Alan McGovern  <amcgovern@novell.com>
+
 	* misc/DefaultValues.cs: We should only create the clip after
 	  we've measured for the first time. Fixes the default value
 	  tests.
